--- a/Tests/Behat/Behat.yml
+++ b/Tests/Behat/Behat.yml
@@ -4,4 +4,5 @@ default:
             paths:
                 - '%paths.base%/vendor/axenox/bdt/Tests/Behat/Features'
             contexts:
+                - axenox\BDT\Tests\Behat\Contexts\BackendErrorGuardContext
                 - axenox\BDT\Tests\Behat\Contexts\UI5Facade\UI5BrowserContext
